optimize mybatis and Util